kubernetes/deploy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-app-new-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    target: sample-api-app-new
